feat:util function to get random 20 digit alphabet

--- a/src/component/TimeCount/TimeCount.module.css
+++ b/src/component/TimeCount/TimeCount.module.css
@@ -1,3 +1,8 @@
 .timer_container {
   color: var(--theme-text-color);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 1rem;
+  margin: 1rem 0rem;
 }
