--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url(./variable.css);
-
+@import "react-toastify/dist/ReactToastify.css";
 body {
   background-color: var(--background-theme);
 }
